<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/exo_ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/exit"/>
    </group>

</menu>