<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".auth.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/colorToolBar">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="@color/colorToolBar">


                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    style="@style/appbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ro`yxatdan o`tish"
                    android:textAllCaps="true" />


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_logonac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/abl_login">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_login"
                style="@style/basic_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_loginac"
                    style="@style/basic_edit_text"
                    android:drawableStart="@drawable/ic_person"
                    android:inputType="textNoSuggestions"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/example"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/til_login_login"
                app:layout_constraintStart_toStartOf="@+id/til_login_login"
                app:layout_constraintTop_toBottomOf="@+id/til_login_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_pass"
                style="@style/basic_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/parol_o_ylab_toping"
                app:layout_constraintTop_toBottomOf="@id/example"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_loginac"
                    style="@style/basic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key"
                    android:inputType="textNoSuggestions|textPassword"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_pass2"
                style="@style/basic_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="Parolni takrorlang"
                app:layout_constraintTop_toBottomOf="@id/til_login_pass"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_loginac2"
                    style="@style/basic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key"
                    android:inputType="textNoSuggestions|textPassword"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textColor="@color/color_red"
                android:id="@+id/tv_pass2"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/til_login_pass2"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:backgroundTint="#F44336"
                android:enabled="false"
                android:text="@string/signup"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pass2"
                tools:layout_editor_absoluteY="243dp" />

            <LinearLayout
                android:id="@+id/ll_exception"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/ll_border_line"
                android:padding="@dimen/_8sdp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/btn_login_register">

                <TextView
                    android:id="@+id/tv_exception"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#F6F1F0"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_logon"
            style="@style/progressbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cl_logonac"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>